brain-tag/src/Views/Components/Channels/index.css
.Channel {
    height: 100%;
}

.container {
    width: 100%;
}

.row {
    width: 100%;
    height: 200px;
    text-align: center;
    margin: 0 auto;
    align-items: center;
    font-size: 2em;
    margin-top: 40px;
    margin-bottom: 40px;
}


.psd {
    width: 30%;
    height: 100%;
}
.raw{
    width: 50%;
    height: 100%;
}

.channelTitle {
    display: flex;
    flex-direction: column;
    width: 10%;
}

canvas {
    width: 100%;
    height: 100%; 
}

